# storyline-app

./: .coverage  .env.default  .gitignore  AGENTS.md  API_USAGE.md  CLAUDE.md  README.md  alembic.ini  build.sh  dev.ps1  dev.sh  package-lock.json  package.json  predeploy.sh  pyproject.toml  test_character_integration.py  test_fastapi.py
.claude/: settings.local.json
characters/: eldric.yaml  morgan.yaml
docs/: example-walkthrough.md  frontend-flow-architecture.md  frontend-migration-execution-plan.md  frontend-shadcn-vue-migration.md  frontend-vision-pipeline-ui.md  interactive-npc-design.md  iteration-2-technical-implementation.md  migration-plan.md  prompt-templates.md
frontend/: .env.default  .gitignore  README.md  biome.json  components.d.ts  components.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite-env.d.ts  vite.config.js  vite.config.js.timestamp-1760564272756-8398e3ae1bdca.mjs
migrations/: env.py
specs/: WEB_INTERFACE.md  vn_implementation_plan.md  vn_implementation_tracker.md  vn_script_schema_draft.md  vn_system_design(1).md
src/: actor.py  agent.py  auth.py  catalog_application_service.py  character_creation_assistant.py  character_creator.py  character_loader.py  character_manager.py  character_responder.py  character_utils.py  chat_logger.py  claude_prompt_processor.py  cli.py  conversation_memory.py  fastapi_server.py  few_shot_loader.py  interactive_chat.py  memory.py  prompt_processor.py  scenario_creation_assistant.py  scenario_generator.py  scenario_to_summary.py  session_application_service.py  session_starter.py  summary_memory.py  text_analyzer.py  world_lore_creation_assistant.py
static/: index.html
tests/: conftest.py  pipeline_test_utils.py  test_action_generator.py  test_agent.py  test_auth.py  test_character_api.py  test_character_creation_assistant.py  test_character_creator.py  test_character_generation_api.py  test_character_loader.py  test_character_manager.py  test_character_pipeline.py  test_character_processor.py  test_character_registry.py  test_character_responder.py  test_character_responder_dependencies.py  test_character_responder_summary_integration.py  test_chat_logger.py  test_claude_prompt_processor.py  test_cli.py  test_cohere_prompt_processor.py  test_continuation_generator.py  test_conversation_memory.py  test_dice_resolver.py  test_event_stream_service.py  test_fastapi.py  test_fastapi_integration.py  test_few_shot_loader.py  (+29 more)
(+209 files in other folders)
