[project]
name = "storyline-app"
version = "0.1.0"
description = "Interactive CLI NPC agent using CrewAI framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "dotenv>=0.9.9",
    "haystack-ai>=2.16.1",
    "pydantic>=2.11.7",
    "pyyaml",
    "rich>=14.1.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov"
]

[dependency-groups]
dev = [
    "python-lsp-server>=1.13.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 200

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # Don't require annotations in tests
